added the style sheet in the project

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<!-- /login.ejs -->
+<!-- views/login.ejs -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="/public/style.css" >
 </head>
 <body>
   <form action="/login" method="post">
