--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Welcome, <%= username %>!</h1>
-    <form action="/chat" method="get">
+    <form action="/send" method="post">
         <label for="message">Send a message:</label>
         <input type="text" id="message" name="message" required>
         <button type="submit">Send</button>
