added contact us page to the project and the nav bar for redirected the user to the desired page

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/contact">ContactUs</a></li>
+            <li><a href="/">Home</a></li>
+        </ul>
+    </nav>
     <h1>Welcome, <%= username %>!</h1>
     <form action="/send" method="post">
         <label for="message">Send a message:</label>
