--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="/public/style.css" >
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="/contact">ContactUs</a></li>
+      <li><a href="/">Home</a></li>
+    </ul>
+  </nav>
   <form action="/login" method="post">
     <label for="username">Enter your username:</label>
     <input type="text" id="username" name="username" required>
